admission_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  namespace: flaskr
  labels:
    component: mutating-controller
webhooks:
  - name: test.example.com
    failurePolicy: Fail
    clientConfig:
      service:
        name: test-mutations
        namespace: flaskr
        path: /mutate/deployments
      caBundle:
    rules:
      - apiGroups: ["apps"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
